# g4f-sdk

./: .gitignore  CONTRIBUTION.md  LICENSE  README.md  con.txt  con2.txt  pyproject.toml  requirements.txt  setup.py
ai/: __init__.py  chat.py  config.py  default_config.py  media.py  models_info.py
g4f_sdk/: __init__.py  audio.py  chat.py  client.py  config.py  exceptions.py  images.py  providers.py  utils.py
