# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "g4f-sdk"
version = "0.1.0"
authors = [
    {name = "ProgVM", email = "progvminc@gmail.com"}
]
description = "The missing resilient and intelligent SDK for the g4f (GPT4Free) library."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["ai", "g4f", "gpt4free", "sdk", "api"]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "g4f",
    "tiktoken",
]

[project.urls]
Homepage = "https://github.com/ProgVM/g4f-sdk"
Repository = "https://github.com/ProgVM/g4f-sdk"
"Bug Tracker" = "https://github.com/ProgVM/g4f-sdk/issues"